--- a/Project-4/style.css
+++ b/Project-4/style.css
@@ -534,20 +534,52 @@ video {
   position: relative;
 }
 
+.-left-10 {
+  left: -2.5rem;
+}
+
+.-left-16 {
+  left: -4rem;
+}
+
+.-left-4 {
+  left: -1rem;
+}
+
+.-left-7 {
+  left: -1.75rem;
+}
+
 .-left-\[40\%\] {
   left: -40%;
+}
+
+.bottom-0 {
+  bottom: 0px;
 }
 
 .bottom-16 {
   bottom: 4rem;
 }
 
+.bottom-3 {
+  bottom: 0.75rem;
+}
+
 .bottom-40 {
   bottom: 10rem;
 }
 
+.bottom-7 {
+  bottom: 1.75rem;
+}
+
 .left-0 {
   left: 0px;
+}
+
+.left-10 {
+  left: 2.5rem;
 }
 
 .left-9 {
@@ -586,6 +618,18 @@ video {
   top: 0px;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-12 {
+  top: 3rem;
+}
+
+.top-32 {
+  top: 8rem;
+}
+
 .top-4 {
   top: 1rem;
 }
@@ -610,126 +654,6 @@ video {
   top: 75px;
 }
 
-.left-12 {
-  left: 3rem;
-}
-
-.left-10 {
-  left: 2.5rem;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
-.bottom-5 {
-  bottom: 1.25rem;
-}
-
-.bottom-7 {
-  bottom: 1.75rem;
-}
-
-.bottom-0 {
-  bottom: 0px;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.bottom-3 {
-  bottom: 0.75rem;
-}
-
-.top-24 {
-  top: 6rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.left-4 {
-  left: 1rem;
-}
-
-.left-5 {
-  left: 1.25rem;
-}
-
-.left-20 {
-  left: 5rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-14 {
-  top: 3.5rem;
-}
-
-.top-16 {
-  top: 4rem;
-}
-
-.left-16 {
-  left: 4rem;
-}
-
-.top-32 {
-  top: 8rem;
-}
-
-.-left-4 {
-  left: -1rem;
-}
-
-.-left-8 {
-  left: -2rem;
-}
-
-.-left-7 {
-  left: -1.75rem;
-}
-
-.-left-16 {
-  left: -4rem;
-}
-
-.-left-6 {
-  left: -1.5rem;
-}
-
-.-left-0 {
-  left: -0px;
-}
-
-.-left-5 {
-  left: -1.25rem;
-}
-
-.-left-3 {
-  left: -0.75rem;
-}
-
-.left-8 {
-  left: 2rem;
-}
-
-.-left-10 {
-  left: -2.5rem;
-}
-
-.-left-20 {
-  left: -5rem;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -744,6 +668,11 @@ video {
 
 .order-2 {
   order: 2;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .mx-auto {
@@ -761,26 +690,12 @@ video {
   margin-bottom: auto;
 }
 
-.mx-3 {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
-}
-
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-
 .-ml-5 {
   margin-left: -1.25rem;
 }
 
 .mt-5 {
   margin-top: 1.25rem;
-}
-
-.mt-10 {
-  margin-top: 2.5rem;
 }
 
 .block {
@@ -799,6 +714,10 @@ video {
   height: 5rem;
 }
 
+.h-4\/5 {
+  height: 80%;
+}
+
 .h-64 {
   height: 16rem;
 }
@@ -807,41 +726,8 @@ video {
   height: 100%;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
-.h-96 {
-  height: 24rem;
-}
-
-.h-40 {
-  height: 10rem;
-}
-
-.h-56 {
-  height: 14rem;
-}
-
-.h-60 {
-  height: 15rem;
-}
-
-.h-3\/4 {
-  height: 75%;
-}
-
-.h-5\/6 {
-  height: 83.333333%;
-}
-
-.h-4\/5 {
-  height: 80%;
-}
-
-.h-fit {
-  height: -moz-fit-content;
-  height: fit-content;
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-12 {
@@ -850,6 +736,18 @@ video {
 
 .w-20 {
   width: 5rem;
+}
+
+.w-3\/5 {
+  width: 60%;
+}
+
+.w-4\/5 {
+  width: 80%;
+}
+
+.w-52 {
+  width: 13rem;
 }
 
 .w-fit {
@@ -861,44 +759,8 @@ video {
   width: 100%;
 }
 
-.w-80 {
-  width: 20rem;
-}
-
-.w-28 {
-  width: 7rem;
-}
-
-.w-36 {
-  width: 9rem;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-56 {
-  width: 14rem;
-}
-
-.w-52 {
-  width: 13rem;
-}
-
-.w-1\/2 {
-  width: 50%;
-}
-
 .w-3\/4 {
   width: 75%;
-}
-
-.w-4\/5 {
-  width: 80%;
-}
-
-.w-3\/5 {
-  width: 60%;
 }
 
 .rotate-90 {
@@ -912,10 +774,6 @@ video {
 
 .flex-col {
   flex-direction: column;
-}
-
-.flex-wrap {
-  flex-wrap: wrap;
 }
 
 .items-center {
@@ -942,10 +800,6 @@ video {
   gap: 4rem;
 }
 
-.gap-y-5 {
-  row-gap: 1.25rem;
-}
-
 .gap-x-10 {
   -moz-column-gap: 2.5rem;
        column-gap: 2.5rem;
@@ -967,10 +821,6 @@ video {
   border-radius: 0.5rem;
 }
 
-.rounded-md {
-  border-radius: 0.375rem;
-}
-
 .rounded-sm {
   border-radius: 0.125rem;
 }
@@ -979,25 +829,8 @@ video {
   border-width: 2px;
 }
 
-.border-4 {
-  border-width: 4px;
-}
-
-.border {
-  border-width: 1px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
-}
-
-.border-transparent {
-  border-color: transparent;
-}
-
-.border-white {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .border-gray-200 {
@@ -1010,14 +843,8 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
-.border-gray-400 {
-  --tw-border-opacity: 1;
-  border-color: rgb(156 163 175 / var(--tw-border-opacity));
-}
-
-.border-gray-900 {
-  --tw-border-opacity: 1;
-  border-color: rgb(17 24 39 / var(--tw-border-opacity));
+.border-transparent {
+  border-color: transparent;
 }
 
 .border-b-\[\#fff\] {
@@ -1035,27 +862,13 @@ video {
   background-color: rgb(28 23 39 / var(--tw-bg-opacity));
 }
 
-.bg-transparent {
-  background-color: transparent;
-}
-
-.bg-inherit {
-  background-color: inherit;
-}
-
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#48098b\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(72 9 139 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#303439\] {
   --tw-bg-opacity: 1;
   background-color: rgb(48 52 57 / var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+  background-color: transparent;
 }
 
 .bg-\[url\(\'\.\/assets\/map\.png\'\)\] {
@@ -1064,6 +877,11 @@ video {
 
 .bg-no-repeat {
   background-repeat: no-repeat;
+}
+
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
 }
 
 .px-4 {
@@ -1091,34 +909,9 @@ video {
   padding-bottom: 2.5rem;
 }
 
-.px-2 {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
-}
-
-.px-1 {
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
-.py-12 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
 .py-32 {
   padding-top: 8rem;
   padding-bottom: 8rem;
-}
-
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
 }
 
 .text-center {
@@ -1144,13 +937,13 @@ video {
   line-height: 1;
 }
 
-.text-xl {
-  font-size: 1.25rem;
+.text-lg {
+  font-size: 1.125rem;
   line-height: 1.75rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
+.text-xl {
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -1162,6 +955,11 @@ video {
   line-height: 1.25;
 }
 
+.text-\[\#627E7D\] {
+  --tw-text-opacity: 1;
+  color: rgb(98 126 125 / var(--tw-text-opacity));
+}
+
 .text-gray-200 {
   --tw-text-opacity: 1;
   color: rgb(229 231 235 / var(--tw-text-opacity));
@@ -1170,16 +968,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-900 {
-  --tw-text-opacity: 1;
-  color: rgb(17 24 39 / var(--tw-text-opacity));
-}
-
-.text-\[\#627E7D\] {
-  --tw-text-opacity: 1;
-  color: rgb(98 126 125 / var(--tw-text-opacity));
 }
 
 .shadow-2xl {
@@ -1213,6 +1001,18 @@ video {
     position: absolute;
   }
 
+  .max-md\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .max-md\:mt-20 {
+    margin-top: 5rem;
+  }
+
+  .max-md\:mt-40 {
+    margin-top: 10rem;
+  }
+
   .max-md\:hidden {
     display: none;
   }
@@ -1238,8 +1038,16 @@ video {
     flex-direction: column;
   }
 
+  .max-md\:items-center {
+    align-items: center;
+  }
+
   .max-md\:justify-evenly {
     justify-content: space-evenly;
+  }
+
+  .max-md\:self-center {
+    align-self: center;
   }
 
   .max-md\:bg-gray-950 {
@@ -1255,11 +1063,19 @@ video {
     padding-left: 2rem;
     padding-right: 2rem;
   }
+
+  .max-md\:text-center {
+    text-align: center;
+  }
 }
 
 @media (min-width: 768px) {
   .md\:relative {
     position: relative;
+  }
+
+  .md\:-left-\[40\%\] {
+    left: -40%;
   }
 
   .md\:order-1 {
@@ -1282,6 +1098,10 @@ video {
     height: 100vh;
   }
 
+  .md\:w-1\/2 {
+    width: 50%;
+  }
+
   .md\:w-4\/5 {
     width: 80%;
   }
@@ -1292,22 +1112,6 @@ video {
 
   .md\:w-\[55\%\] {
     width: 55%;
-  }
-
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
-  .md\:w-1\/3 {
-    width: 33.333333%;
-  }
-
-  .md\:w-2\/3 {
-    width: 66.666667%;
-  }
-
-  .md\:w-2\/5 {
-    width: 40%;
   }
 
   .md\:flex-row {
